hphp/hack/test/typecheck/trait_reuse/trait_reuse_cyclic.php.legacy_decl.exp
File "trait_reuse_cyclic.php", line 10, characters 7-16:
This type doesn't implement the method `foo` (Typing[4054])
  File "trait_reuse_cyclic.php", line 11, characters 7-17:
  Which is required by this interface
  File "trait_reuse_cyclic.php", line 6, characters 25-27:
  As defined here
File "trait_reuse_cyclic.php", line 11, characters 7-17:
Cyclic class definition : `ReusedTrait` `OtherTrait` `MyParent` `BadClass`  (Typing[4013])
File "trait_reuse_cyclic.php", line 19, characters 7-17:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `MyParent`. (Typing[4186])
  File "trait_reuse_cyclic.php", line 14, characters 7-14:
  `MyParent` is defined here
  File "trait_reuse_cyclic.php", line 15, characters 7-17:
  `MyParent` uses `ReusedTrait`
  File "trait_reuse_cyclic.php", line 11, characters 7-17:
  `ReusedTrait` uses `ReusedTrait`
  File "trait_reuse_cyclic.php", line 11, characters 7-17:
  `ReusedTrait` uses `ReusedTrait`
  File "trait_reuse_cyclic.php", line 6, characters 25-27:
  `ReusedTrait` has a final method `foo`
